--- a/hbd.html
+++ b/hbd.html
@@ -71,7 +71,7 @@
        <!-- Pesan -->
        <p id="pesan3">Ciee.. Ada yang Ultah Nih 🤣❤️</p>
        <p id="pesan4">Happy Birthday, </p>
-       <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe</p>
+       <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe😁</p>
        <p id="pesan6" class="gaya2">Moga panjang umur biar tiap tahun bisa traktirin aku wkwk 😆❤️</p>
        <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
 
