--- a/happy/hbd (1).html
+++ b/happy/hbd (1).html
@@ -44,7 +44,7 @@
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
-         <img src="https://feeldreams.github.io/bunga.gif" id="fotostiker"/>
+         <img src="https://kapten337.github.io/IMG_20241221_073639.jpg"/>
          <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker1"/>
          <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker2"/>
          <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3"/>
