--- a/happy/kepo.html
+++ b/happy/kepo.html
@@ -32,7 +32,7 @@
    <audio src="https://feeldreams.github.io/djikhlas.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper --><img src="https://feeldreams.github.io/wp9.jpg" id="wallpaper"/><div id="beneranblur"></div>
+     <!-- Wallpaper --><img src="https://kapten337.github.io/IMG_20241220_234304.jpg" id="wallpaper"/><div id="beneranblur"></div>
    </div>
    
    <div id='Content'>
@@ -44,7 +44,7 @@
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
-         <img src="https://feeldreams.github.io/bunga.gif" id="fotostiker"/>
+         <img src="https://kapten337.github.io/IMG_20241221_073639.jpg" id="fotostiker"/>
          <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker1"/>
          <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker2"/>
          <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3"/>
