--- a/happy/kepo.html
+++ b/happy/kepo.html
@@ -46,7 +46,7 @@
          <!-- Stiker untuk Konten -->
          <img src="https://kapten337.github.io/IMG_20241221_073639.jpg" id="fotostiker"/>
          <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker1"/>
-         <img src="https://kapten337.github.io/00100sPORTRAIT_00100_BURST20240109205954124_COVER.jpg" id="fotostiker2"/>
+         <img src="https://kapten337.github.io/IMG_20241221_211451.jpg" id="fotostiker2"/>
          <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3"/>
          <img src="https://feeldreams.github.io/pandakuning.gif" id="fotostiker4"/>
          <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker5"/>
