--- a/happy/kepo.html
+++ b/happy/kepo.html
@@ -71,9 +71,9 @@
        <!-- Pesan -->
        <p id="pesan3">Ciee.. Ada yang Ultah Nih 🤣❤️</p>
        <p id="pesan4">Happy Birthday, </p>
-       <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe</p>
+       <p id="pesan5" class="gaya2">Nambah tua aja ya, hehe😁</p>
        <p id="pesan6" class="gaya2">Moga panjang umur biar tiap tahun bisa traktirin aku wkwk 😆❤️</p>
-       <p id="pesan7" class="gaya2">Sehat selalu ya, 
+       <p id="pesan7" class="gaya2">Sehat selalu, 
        lancar rezekinya, dimudahkan segala urusannya, rajin ibadahnya dan sukses selalu ya! </p>
 
        <p id="pesan8" class="gaya2">Canda wkwwk :v</p>
