--- a/happy/kepo.html
+++ b/happy/kepo.html
@@ -49,7 +49,7 @@
          <img src="https://kapten337.github.io/IMG_20241221_211451.jpg" id="fotostiker2"/>
          <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3"/>
          <img src="https://kapten337.github.io/IMG_20241221_211516.jpg" id="fotostiker4"/>
-         <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker5"/>
+         <img src="https://kapten337.github.io/IMG_20241221_221631.jpg" id="fotostiker5"/>
          
          <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker6"/>
      </div>
