--- a/happy/kepo.html
+++ b/happy/kepo.html
@@ -45,13 +45,13 @@
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
          <img src="https://kapten337.github.io/IMG_20241221_073639.jpg" id="fotostiker"/>
-         <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker1"/>
+         <img src="https://kapten337.github.io/gambar1.jpg" id="fotostiker1"/>
          <img src="https://kapten337.github.io/IMG_20241221_211451.jpg" id="fotostiker2"/>
-         <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3"/>
+         <img src="https://kapten337.github.io/gambar2.jpg" id="fotostiker3"/>
          <img src="https://kapten337.github.io/IMG_20241221_211516.jpg" id="fotostiker4"/>
          <img src="https://kapten337.github.io/IMG_20241221_221631.jpg" id="fotostiker5"/>
          
-         <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker6"/>
+         <img src="https://kapten337.github.io/gambar3.jpg" id="fotostiker6"/>
      </div>
      
      <p id="halo" class="halo"></p>
