--- a/happy/kepo.html
+++ b/happy/kepo.html
@@ -51,7 +51,7 @@
          <img src="https://kapten337.github.io/IMG_20241221_211516.jpg" id="fotostiker4"/>
          <img src="https://kapten337.github.io/IMG_20241221_221631.jpg" id="fotostiker5"/>
          
-         <img src="https://kapten337.github.io/gambar3.jpg" id="fotostiker6"/>
+         <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker6"/>
      </div>
      
      <p id="halo" class="halo"></p>
